# Tutoriat

./: Adult.cpp  Adult.h  CMakeLists.txt  Copil.cpp  Copil.h  Data.cpp  Data.h  Joc.h  Pacient.cpp  Pacient.h  README.md  ScurtPoo.txt  include.h  main.cpp
TestLab9/: Apartament.cpp  Apartament.h  CMakeLists.txt  Casa.cpp  Casa.h  Locuinta.cpp  Locuinta.h  main.cpp
doi/: CMakeLists.txt  European.cpp  European.h  Francez.cpp  Francez.h  Roman.cpp  Roman.h  include.h  main.cpp
other/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp
patru/: CMakeLists.txt  main.cpp
seminar/: CMakeLists.txt  S1DiferenteCCpp.cpp  S2p1claseDateMet.cpp  S2p2claseImplicit.cpp  S2p3claseExplicit.cpp  S3p2derivConstr.cpp  s2p4claseOperatori.cpp  s3p2opCitBD.cpp  s4p1virtMet.cpp  s4p2virtMeFiguri.cpp  s5p1templateFEx.cpp  s5p2templateFConst.cpp  s5p3templateC.cpp  s5p4templateCFExt.cpp  s6p10exceptiiFct.cpp  s6p11staticDatMet.cpp  s6p2constFct.cpp  s6p3constEx.cpp  s6p4constDate.cpp  s6p5constObMt.cpp  s6p7rtti1.cpp  s6p8dinamicCast.cpp  s6p9exceptiiMain.cpp
trei/: CMakeLists.txt  ceva.h  main.cpp
unu/: Admin.cpp  Admin.h  CMakeLists.txt  Joc.cpp  Joc.h  Player.cpp  Player.h  include.h  main.cpp
